--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
-app:
-  build: .
-  ports:
-    - 8080:5000
-  environment:
-    - FLASK_DEBUG=1
-  volumes:
-    - ./src:/src
+version: '2'
+services:
+  app:
+    build: .
+    image: toolness/flask-example:latest
+    ports:
+      - 8080:5000
+    environment:
+      - FLASK_DEBUG=1
+    volumes:
+      - ./src:/src
